--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install pipenv
-        python -m pipenv sync
+        python -m pipenv install -d
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
