--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,6 +28,8 @@ jobs:
       run: |
         python -m pip install pipenv
         python -m pipenv install -d
+    - name: Activate Virtualenv
+      run: |
         python -m pipenv shell
     - name: Lint with flake8
       run: |
