--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,16 +27,16 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install pipenv
-        python -m pipenv install -d
+        pipenv install -d
     - name: Activate Virtualenv
       run: |
-        python -m pipenv shell
+        pipenv shell
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        python -m flake8 .
+        flake8 .
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        python -m flake8 .
+        flake8 .
     - name: Test with pytest
       run: |
         pytest
