--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,9 +28,9 @@ jobs:
       run: |
         python -m pip install pipenv
         pipenv install -d
-    - name: Activate Virtualenv
-      run: |
-        pipenv shell
+#    - name: Activate Virtualenv
+#      run: |
+#        pipenv shell
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
