--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,11 +26,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install pipenv
-        pipenv install -d
-#    - name: Activate Virtualenv
-#      run: |
-#        pipenv shell
+        pip install -q pipenv
+        pipenv sync --dev
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
