--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -19,8 +19,11 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        pip install -q pipenv flake8
+        pip install -q pipenv flake8 pytest
         pipenv sync --dev
     - name: Lint with flake8
       run: |
         flake8
+    - name: Tests with Pytest
+      run: |
+        pytest
