--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -19,11 +19,11 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        pip install -q pipenv flake8 pytest
+        pip install -q pipenv flake8 pytest pytest-cov
         pipenv sync --dev
     - name: Lint with flake8
       run: |
         flake8
-    - name: Tests with Pytest
+    - name: Tests with Pytest and Coverage
       run: |
-        pytest
+        pytest libpythonpro --cov=libpythonpro
