criado e ajustado arquivos de testes

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ requests = "*"
 flake8 = "*"
 pytest = "*"
 pytest-cov = "*"
+pytest-mock = "*"
+coverage = "*"
 
 [requires]
 python_version = "3.10"
